--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Joshua Laesch</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
     <div ng-app="routingApp" ng-controller="appController">
@@ -20,9 +20,8 @@
         </div>
         <ng-view></ng-view>
     </div>
-    
-    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
-    <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="JS/app.js"></script>
+    <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
+    <script type="text/javascript" src="/node_modules/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="/JS/app.js"></script>
 </body>
 </html>
