2nd try get it to find angular(last one I forgot index)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <ng-view></ng-view>
     </div>
-    <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
-    <script type="text/javascript" src="/node_modules/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="/JS/angular.min.js"></script>
+    <script type="text/javascript" src="/JS/angular-route.min.js"></script>
     <script type="text/javascript" src="/JS/app.js"></script>
 </body>
 </html>
